infra/kubernetes/db-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-service
  namespace: security
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-service
  template:
    metadata:
      labels:
        app: db-service
    spec:
      containers:
        - name: db-service
          image: smartcito/db-service:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: security
spec:
  selector:
    app: db-service
  ports:
    - port: 5432
      targetPort: 5432
